# kumir2

./: .travis.yml  CMakeLists.txt  version_info.cmake
.gear/: gear-update-branch  kumir2.spec  rules
.gear/tags/: list
scripts/: gen_actor_source.py  query_version_info.py
src/actors/arduino/: CMakeLists.txt  arduino.json  arduinomodule.cpp  arduinomodule.h
src/actors/robot/: robotmodule.cpp
src/app/: CMakeLists.txt
src/app/kumir2-arduino/: CMakeLists.txt
src/app/kumir2-robots/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/arduinocodegenerator/: CMakeLists.txt  arduino_data.hpp  arduino_instruction.hpp  arduino_tableelem.hpp  arduinocodegeneratorplugin.cpp  arduinocodegeneratorplugin.h  generator.cpp  generator.h  instruction.h
src/plugins/arduinocompilertool/: CMakeLists.txt  arduinocompilertoolplugin.cpp  arduinocompilertoolplugin.h
src/plugins/coregui/: kumirprogram.cpp  kumirprogram.h
src/tools/: CMakeLists.txt
src/tools/pictomir2course/: CMakeLists.txt
userdocs/: ActorArduino.xml
